# GrammarBot

./: .gitignore  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml  run.sh
.github/workflows/: ci.yml
grammarbot/: __main__.py  bot.py  config.py  plugin.py
tests/: test_tests.py
