[tool.poetry]
name = "grammarbot"
version = "0.1.0"
description = "If you want to drive your server insane, look no further than GrammarBot."
authors = ["CircuitSacul <circuitsacul@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
hikari = "^2.0.0.dev110"
hikari-crescent = "^0.3.0"
language-tool-python = "^2.7.1"

[tool.poetry.dev-dependencies]
mypy = "^0.991"
nox = "^2022.1.7"
isort = "^5.10.1"
flake8 = "^5.0.4"
black = "^22.3.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
